resources/assets/styles/layouts/_header.scss
.banner .nav li {
  //@extend .nav-item;
}

.banner .nav a {
  //@extend .nav-link;
}

.page-header {
  position: relative;
  z-index: 0;
  height: $golden-ratio-6;
  background-color: $gray-1;

  @include respond(xs, sm) {
    height: auto;
  }

  &--float {
    z-index: 4;
    position: absolute;
    top: auto;
    bottom: 0;
    background-color: transparent;
    margin-bottom: $golden-ratio-2;
    width: 100%;

    @include respond(xs, sm) {
      position: static;
      margin-bottom: 0;
      height: auto;
      line-height: 1.5em;
    }

    > .container {
      display: flex;
      align-items: flex-end;

      @include respond(xs, sm) {
        flex-direction: column;
        align-items: flex-start;
      }
    }
  }

  &--title {
    margin: 0;
    font-size: $type-4;
    line-height: $golden-ratio-4;
    color: $white;
    font-weight: 700;

    @include respond(xs, sm) {
      line-height: $golden-ratio-4;
      font-size: $type-3;
    }
  }

  &--title-wrap {
    display: block;
    color: $white;
  }

  &--title-wrap-long {
    h2 {
      padding-bottom: 0;
      margin-bottom: 0;
    }

    span {
      color: $gray-1;
      display: block;
      margin: -6px 0 0;
      font-size: $type-3;

      @include respond(xs, sm) {
        display: none !important;
      }
    }
  }

  &.page-header-hero {
    height: auto !important;
    background-color: transparent;
    position: relative;
    max-width: 1364px;
    margin: 0 auto;

    .page-header--float {
      bottom: 0;
    }

    .page-header--title {
      color: $white;
    }
  }

  .page-header-hero--background {
    width: 100%;
    height: 100%;
    background-color: $smokey;
    overflow: hidden;
    z-index: 1;

    > img {
      width: 100%;
      min-width: 100%;
      height: auto;
    }
  }

  .page-header-hero--overlay {
    position: absolute;
    width: 100%;
    height: $golden-ratio-8;
    bottom: 0;
    background-color: $smokey;
    overflow: hidden;
    z-index: 2;

    @include filter-gradient(rgba($smokeyx, 0), 0%, rgba($smokeyx, 1), 80%);
  }
}

body.utk-search-open {
  .utk-search-wrapper {
    transition: $transition-all;
  }

  &.header-scroll-down {
    .page-header--float {
      box-shadow: inset 0 -1px 0 lighten($smokey, 5);
    }

    .utk-header-search {
      box-shadow: inset $box-shadow-float;
    }
  }
}

/*
 * default behaviors at md, lg, xl... (desktop)
 */
@include respond(md, lg, xl) {
  .header-scroll-down {
    .utk-header-main {
      margin-top: 0 !important;
    }

    .utk-search-wrapper {
      width: 100%;
      max-width: 100%;
      left: 0;

      .utk-search-options {
        padding-left: 0;
      }
    }

    .utk-logo-wrapper {
      .utk-logo-primary {
        top: -3000px;
        box-shadow: none;
        padding: 0;
        height: 0;
      }

      .utk-logo-square {
        left: 0;
      }

      .utk-logo-unit {
        left: $golden-ratio-4 !important;
        padding-left: $golden-ratio-2 !important;
      }
    }

    .page-header {
      z-index: auto;

      .page-body--aside {
        z-index: 3 !important;
      }

      .page-body--container {
        position: static;
      }

      .page-body--content {
        z-index: 0;
      }

      .page-header--float {
        height: 47px;
        background-color: $smokey;
        position: fixed;
        top: 82px;
        bottom: auto;
        z-index: 99996;

        .page-header--title-wrap {
          margin-left: 0;

          &.page-header--title-wrap-long {
            p {
              display: none !important;
            }
          }
        }

        h2.page-header--title {
          margin-left: 0;
          color: $white;
          font-size: 18px !important;
        }
      }
    }
  }
}

/*
 * default behaviors at sm (tablet) and xs (mobile)
 */
@include respond(xs, sm) {
  .container {
    max-width: 100% !important;
  }

  .page-header {
    z-index: auto;

    .page-body--aside {
      z-index: 3 !important;
    }

    .page-body--container {
      position: static;
    }

    .page-body--content {
      z-index: 0;
    }

    .page-header--float {
      height: 47px;
      background-color: $smokey;
      position: fixed;
      top: 82px;
      z-index: 4;
      transition: $transition-all;

      @include respond(xs) {
        top: 66px;
      }

      .page-header--title-wrap {
        margin-left: 0;
        flex-grow: 1;
      }

      h2.page-header--title {
        margin-top: 11px;
        color: $white;
        font-size: $type-3 !important;
        line-height: 1.47em !important;
        padding-left: 65px;
        font-weight: 700;

        @include respond(xs) {
          margin-top: 13px;
          font-size: $type-2 !important;
          padding-left: 41px;
        }
      }
    }
  }
}

.utk-menu-open {
  #utk-lib-main,
  #utk-lib-midsection,
  #utk-lib-footer {
    filter: blur(11px);
  }
}

//@include respond(xs) {
//  body.header-scroll-down:not(.header-show) {
//    #utk-lib-header .utk-header .utk-header-main {
//      top: -66px;
//    }
//
//    .page-header .page-header--float {
//      top: 6px !important;
//    }
//  }
//}

